--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,13 @@
-<html>
-    <head>
-        <title>Jin's blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="">Taewoo Blog</a></h1>
-        </div>
-        {% for post in posts %}
-        <div>
-            <p>published : {{post.published_date}}</p>
+{% extends 'blog/base.html' %}      # template 이하 경로로 설정.
+
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{post.published_date}}
+            </div>
             <h1><a href="">{{post.title}}</a></h1>
             <p>{{post.text|linebreaks}}</p>
         </div>
-        {% endfor %}
-    </body>
-</html>
+    {% endfor %}
+{% endblock %}
