Add views to publish/remove blog post and login/logout page.

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,12 +2,15 @@
 
 {% block content %}
 <div class="post" >
-    {% if post.published_date %}
-        <div class="date" >
-            <p>{{post.published_date}} </p>
-        </div>
-    {% endif %}
-    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+    <div class="date" >
+        {% if post.published_date %}
+            <STRONG>{{post.published_date}} </STRONG>
+        {% else %}
+            <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}" role="button" >Publish</a>
+        {% endif %}
+            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}" role="button" ><span class="glyphicon glyphicon-pencil"></span></a>
+            <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}" role="button" ><span class="glyphicon glyphicon-remove"></span></a>
+    </div>
     <h1>{{ post.title }} </h1>
     <p>{{ post.text|linebreaks }}</p>
 </div>
