--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,9 +12,13 @@
     <body>
         <div class="page-header">
             {% if user.is_authenticated %}
+                <a href="{% url 'post_draft_list' %}" class="top-menu" ><span class="glyphicon glyphicon-edit"></span></a>
                 <a href="{% url 'post_new' %}" class="top-menu" ><span class="glyphicon glyphicon-plus"></span></a>
+                <p class="top-menu">Hello, {{ user.username }}<small>(<a href="{% url 'django.contrib.auth.views.logout' %}">Log out</a>)</small></p>
+            {% else  %}
+                <a href="{% url 'django.contrib.auth.views.login' %}" class="top-menu" ><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
-            <h1><a href="">Taewoo Blog</a></h1>
+            <h1><a href="{% url 'post_list' %}">Taewoo Blog</a></h1>
         </div>
         <div class="content container">
             <div class="row">
