--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
     {% for post in posts %}
         <div class="post">
             <div class="date">
-                {{post.published_date}}
+                <STRONG>{{post.published_date}}</STRONG>
             </div>
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
             <p>{{post.text|linebreaks}}</p>
