--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,6 +14,7 @@
     <h1>{{ post.title }} </h1>
     <p>{{ post.text|linebreaks }}</p>
 </div>
+<a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}" >Add comment</a>
 {% for comment in post.comments.all %}
     <div class="comment">
         <div>created date: {{ comment.created_date }}</div>
@@ -21,6 +22,6 @@
         <p>{{ comment.text|linebreaks }}</p>
     </div>
 {% empty %}
-    <p>No comments here yet: </p>
+    <p>No comments here yet :( </p>
 {% endfor %}
 {% endblock %}
