--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,11 +16,19 @@
 </div>
 <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}" >Add comment</a>
 {% for comment in post.comments.all %}
-    <div class="comment">
-        <div>created date: {{ comment.created_date }}</div>
-        <strong>Author: {{ comment.author }}</strong>
-        <p>{{ comment.text|linebreaks }}</p>
+    {% if user.is_authenticated or comment.approved_comment %}
+<div class="comment">
+    <div class="date">
+        created date: {{ comment.created_date }}
+        {% if not comment.approved_comment %}
+            <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
+            <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+        {% endif %}
     </div>
+    <strong>Author: {{ comment.author }}</strong>
+    <p>{{ comment.text|linebreaks }}</p>
+</div>
+{% endif %}
 {% empty %}
     <p>No comments here yet :( </p>
 {% endfor %}
